# vybe-samples

./: README.md
ai-document-analysis/: CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
ai-document-analysis/.claude/hooks/: README.md
ai-document-analysis/.claude/hooks/context/: update-dependencies.sh
ai-document-analysis/.claude/templates/: architecture.template.md  pattern-template.template
ai-document-analysis/.vybe/audit/: stage-1-template-compliance-report.md
ai-document-analysis/.vybe/features/stage-1/: design.md  requirements.md
ai-document-analysis/.vybe/project/: .template  architecture.md  conventions.md  overview.md
ai-document-analysis/.vybe/tech/: frameworks.yml
ai-document-analysis/.vybe/templates/genai_launchpad/source/: README.md
ai-document-analysis/.vybe/templates/genai_launchpad/source/app/: .env.example
ai-document-analysis/.vybe/templates/genai_launchpad/source/app/core/commands/: init_workflow.py
ai-document-analysis/.vybe/templates/genai_launchpad/source/app/core/nodes/: base.py  concurrent.py
ai-document-analysis/.vybe/templates/genai_launchpad/source/app/worker/: config.py
ai-document-analysis/.vybe/templates/genai_launchpad/source/app/workflows/: workflow_registry.py
ai-document-analysis/app/api/: documents.py
ai-document-analysis/app/core/: exceptions.py
ai-document-analysis/app/services/: openai_service.py
ai-document-analysis/demo/test_documents/: sample_text.txt
ai-document-analysis/static/: index.html
vybe-samples/ai-document-analysis/: .env  .env.example  README.md
vybe-samples/ai-document-analysis/.vybe/templates/genai_launchpad/source/: pyproject.toml
vybe-samples/ai-document-analysis/.vybe/templates/genai_launchpad/source/docker/: .env.example  Dockerfile.api  Dockerfile.celery  docker-compose.launchpad.yml  docker-compose.supabase.yml  docker-compose.yml
(+56 files in other folders)
