[project]
name = "document-analysis-ai"
version = "1.0.0"
description = "AI-powered document analysis application - Stage 1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "python-multipart>=0.0.9",
    "openai>=1.51.0",
    "pdfplumber>=0.11.0",
    "python-magic>=0.4.27",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.1.0",
    "chardet>=5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.13",
    "pyright>=1.1.390",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["E501"]
exclude = [".venv", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

